# ProdFlow

backend/: .gitignore  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
backend/api/core/: config.py  exceptions.py  routers.py
backend/api/core/dependencies/: jwt_access.py  repositories.py  services.py
backend/api/core/logging/: handlers.py  logger_config.py  logging_middleware.py
backend/api/v1/auth/: handlers.py  schemas.py  service.py
backend/api/v1/devices/: handlers.py  repo_interface.py  schemas.py  service.py
backend/api/v1/roles/: handlers.py  repo_interface.py  schemas.py  service.py
backend/api/v1/users/: handlers.py  repo_interface.py  schemas.py  service.py
backend/config/: permissions.py  validation.py
backend/config/validations/: password_validation.py
backend/db/: db_exceptions.py  models.py  session.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 28878376c89a_add_username_to_user_model.py  81f091e37c32_create_roles_users_and_devices_tables.py  9dc0b3312bf6_add_full_name_field_for_user_model.py  bd98426d85f8_make_role_ids_in_user_model_accept_to_.py  e844693c949d_add_password_to_user_model.py
backend/db/repositories/postgres/: devicesRepo.py  roleRepo.py  usersRepo.py  utils.py
backend/scripts/: create_superadmin.py  delete_superadmin.py
backend/tests/: alembic.ini  conftest.py  testDAL.py  utils_for_tests.py
backend/tests/test_handlers/test_auth/: test_auth.py
backend/tests/test_scripts.py/: test_create_superadmin.py  test_delete_superadmin.py
backend/utils/: jwt.py
(+50 files in other folders)
